fix main container align

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,11 +20,13 @@ body,
 }
 
 main {
-  flex: 1 1 auto;
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: auto;
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   padding-bottom: 20px;
 }
